--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -1,9 +1,9 @@
 name: Tweet Random IT Term Bot
 
 on:
-  # 日本時間の毎日9時から22時まで、1時間おきに実行 (UTC: 0時-13時)
   schedule:
-    - cron: '0 0-13 * * *'
+    # 日本時間の毎朝8時30分に実行 (UTC: 前日23時30分)
+    - cron: '30 23 * * *'
   
   # 手動実行も可能にする
   workflow_dispatch:
@@ -39,4 +39,4 @@ jobs:
           TWITTER_API_KEY_SECRET: ${{ secrets.TWITTER_API_KEY_SECRET }}
           TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
           TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-          SITE_URL: ${{ secrets.SITE_URL }} # SITE_URLもSecretから渡すのが安全です
+          SITE_URL: ${{ secrets.SITE_URL }}
